# news_manager

./: .gitignore  CONVENCIONES.md  LICENSE  README.md  example_usage.md  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_bluesky_history.py
docs/: README.md  _config.yml  index.html  styles.css
news_manager/: __main__.py  bluesky_history.py  cli.py  exceptions.py  file_manager.py  llm.py  news_generator.py  utils.py  utils_base.py  validators.py  web_extractor.py
news_publisher/: __main__.py  cli.py  publish_bluesky.py
tests/: README.md  __init__.py  test_cli.py  test_llm.py  test_url_functions.py  test_utils.py
