[project]
name = "news-manager" # You can change this to your project's actual name
version = "0.1.0"
description = "A brief description of your project."
authors = [
    { name = "Your Name", email = "your.email@example.com" } # Fill in your details
]
requires-python = ">=3.9"
dependencies = [
    "click",
    "google-generativeai",
    "python-dotenv",
    "requests",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest"]
